<resources>
    <string name="app_name">McNicholl_Caravans</string>
    <string name="app_version">1.1.0</string>

    <string name="title_activity_gmaps">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>
    <string name="alert_close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="or">OR</string>
    <string name="send">Send</string>
    <string name="noname"></string>
    <string name="finish_message">Press again to exit</string>
    <string name="error_network">Network unavailable, please try again later</string>
    <string name="error_invalid_credentials">Invalid Credentials.</string>

    <string name="request_permission_hint">Please allow permissions to use function</string>

    <string name="choose_action">Choose action for photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>

    <string name="title_signin">Sign In</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_signup_hint">Not a member?</string>
    <string name="title_signin_hint">Already Signed up? Log in</string>
    <string name="title_register_now">Signup!</string>

    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_password_confirm">Confirm Password</string>

    <!-- Sharing App -->
    <string name="share_title">Share</string>
    <string name="share_subject">You have been Invited to join McNicholl_Caravans.</string>
    <string name="share_body">Check out the MDF app. It really good!\n https://play.google.com/store/apps/details?id=com.example.b00641907.mcnicholl_caravans</string>


    <string-array name="array_sale_type">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="msg_encountered_an_unexpected_error">We have encountered an unexpected error while verifying your credentials!</string>
    <string name="pending_verification">Please wait while admin verify your credentials.</string>

    <string name="title_new_gas">Add New Gas</string>
    <string name="title_edit_gas">Edit Gas Information</string>
    <string name="hint_gas_name">Gas Name</string>
    <string name="hint_gas_weight">Weight Per Box(ex : 20Kg)</string>
    <string name="hint_gas_price">Price Per Box(ex : £12)</string>
    <string name="hint_gas_description">Gas Description</string>
    <string name="title_add_gass">Add Gas Information</string>
    <string name="title_update_gass">Update Gas Information</string>
    <string name="error_select_gas_image">Please choose Gas image</string>
    <string name="error_input_information">Please input information</string>
    <string name="error_input_price">Please input correct price</string>
    <string name="error_input_weight">Please input correct Weight</string>
    <string name="success_add_new_gas">Successfully added new Gas Information.</string>
    <string name="success_update_gas">Successfully updated Gas Information.</string>
    <string name="error_upload_image">File Upload Failed!</string>

    <string name="title_new_caravan">Add New Caravan</string>
    <string name="title_edit_caravan">Edit Caravan Information</string>
    <string name="title_add_caravan">Add Caravan Information</string>
    <string name="title_update_caravan">Update Caravan Info</string>

    <string name="error_select_image">Please select image</string>
    <string name="success_add_new_caravan">Successfully added new Caravan Information.</string>
    <string name="success_update_caravan">Successfully updated Caravan Information.</string>
    <string name="success_remove_caravan">Successfully removed.</string>

    <string name="hint_caravan_name">Caravan Name</string>
    <string name="hint_caravan_description">Caravan Description</string>
    <string name="hint_caravan_price">Price(ex : £12)</string>

    <string name="error_disable_edit">Only Admin can change information. Pleaes try with other item.</string>

    <string name="hint_event_name">Event Name</string>
    <string name="hint_event_time">Event Time</string>
    <string name="hint_event_description">Event Description</string>

    <string name="title_add_event">Add Event</string>
    <string name="title_update_event">Update Event</string>

    <string name="error_select_event_image">Please choose Event image</string>
    <string name="success_add_new_event">Successfully added new Event Information.</string>
    <string name="success_update_event">Successfully updated Event Information.</string>
    <string name="title_meeting_list">Meeting List</string>

    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>
</resources>
